add: image to the project

--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Hello Project two</h1>
+    <div id="gallery">
+        <img src="imgs/img6.jpg" width="300" height="300" alt="">
+    </div>
 </body>
 </html>
